# openGL_practice

./: .gitignore  README.md
CGExercice/: CMakeLists.txt  readme.md  readme.txt
CGExercice/dep/GLAD/include/glad/: glad.h
CGExercice/dep/GLAD/src/: glad.c
CGExercice/dep/GLFW_/lib/: glfw3.lib
CGExercice/src/: main.cpp
CGExercice/src/GpuLayer/: GpuLayer.cpp  GpuLayer.h
LearnOpenGL/: Makefile  ex1.cpp  output
LearnOpenGL/glad/: glad.c  glad.h
Qt_OpenGL_example1/: mainwindow.cpp  mainwindow.h  mainwindow.ui  myopengl.cpp  myopengl.h  myopengl_interface_methods.cpp  opengl_application.pro  square.h
Qt_OpenGL_example2/: gui_control.cpp  main.cpp  mainwindow.h  mainwindow.ui  myopengl.cpp  myopengl.h  opengl_application.pro
Qt_OpenGL_starter_code/: main.cpp  mainwindow.cpp  mainwindow.ui  myopengl_interface_methods.cpp  opengl_application.pro
example1/: main  main.cpp
example2_coloring/: Makefile  main  main.cpp
example3_gradient_colors/: main  main.cpp
glfw_starter_code/: Makefile  main.cpp  opengl_window.cpp  opengl_window.h
starter_code/: Makefile  main.cpp
